--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             
 
              <!-- Headline -->
-            <h4 class="my-4"><b> <span style="color: red;"> </span>  <i> ¡Transforma tu alimentación y recupera el control absoluto de tu cuerpo en 21 días con este plan alimenticio, sin dietas extremas ni horas de entrenamiento! </i> </b></h4>
+            <h4 class="my-4"> <span style="color: red;"> </span>  <i> ¡Transforma tu alimentación y recupera el control absoluto de tu cuerpo en  <span style="color: green;"> <b> 21 días </b>  </span>  con este plan alimenticio, sin dietas extremas ni horas de entrenamiento! </i> </h4>
            
             <!-- VSL -->
 <script src="https://fast.wistia.com/player.js" async></script><script src="https://fast.wistia.com/embed/w1rvr26qct.js" async type="module"></script><style>wistia-player[media-id='w1rvr26qct']:not(:defined) { background: center / contain no-repeat url('https://fast.wistia.com/embed/medias/w1rvr26qct/swatch'); display: block; filter: blur(5px); padding-top:56.25%; }</style> <wistia-player media-id="w1rvr26qct" aspect="1.7777777777777777"></wistia-player>           
