--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ src="https://www.facebook.com/tr?id=1599833577373695&ev=PageView&noscript=1"
           <div class="col-lg-8 text-center">
             <!-- Progress Bar -->
             <div class="progress-widget">
-                <div class="progress-bar" role="progressbar" style="width ; height: 44px; background-color: #E00C19;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"> <p class="progress-text">Felicitaciones por adquirir el Protocolo GásFit...</p>
+                <div class="progress-bar" role="progressbar" style="width ; height: 44px; background-color: #E00C19;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"> <p class="progress-text">Felicitaciones por adquirir el Rutina de tés adelgazantes...</p>
                   <span style="font-family:'Roboto'; font-size: 12px; font-weight: 600;"></span>
                 </div>
               </div>
